pretext to  2. Where-osan_liitosehto_harjoitukset.md

--- a/2. Where-osan_liitosehto_harjoitukset.md
+++ b/2. Where-osan_liitosehto_harjoitukset.md
@@ -1,6 +1,6 @@
 
 
-Where-osan liitosehto harjoitukset
+Where-osan liitosehto harjoitukset (kuvankaappaukset myöhemmissä tehtävissä ilman turhia linkkejä)
 
 1.
 select country.name as 'country name', airport.name as 'airport name' 
